build: info on the new VR stuff